style.css
:root {
    --animDur: 20s;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

.inter-black {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 900;
    font-style: normal;
}

.inter-regular {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

body {
    background-color: rgb(255, 255, 255);
    margin: 0;
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
}

.big-text {
    color: #000000;
    font-weight: 900;
    font-size: clamp(80px, 10vw, 300px);
    margin: 0;
}

.rectangle {
    position: absolute;
    width: 200px;
    height: 150px;
    background-color: grey;
    transform-origin: center;
}

.rectangle.light {
    background-color: #b0b0b0;
    transform: rotate(10deg);
}

.rectangle.dark {
    transform: rotate(-10deg);
}

#intro {
    transition: all 1s ease-in;
    color: #ffffff;
    display: flex;
    align-items: center;
    padding-inline: 5%;
    gap: 5%;

    flex-direction: column;
    align-items: start;
    justify-content: center;
}

#hello-world {
    color: inherit;
    width: fit-content;
    line-height: 85%;
    /* mix-blend-mode: difference; */
}

#background {
    /* The image used */
    background-image: url(images/steve-gribble-unsplash.jpg);
    /* Full height */
    height: 100%;

    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    filter: saturate(0);
    transition: all 1s ease-in;
}

nav {
    color: transparent;
    position: fixed;
    bottom: 0;
    display: flex;
    flex-direction: row;
    padding-bottom: 35px;
    width: 100%;
    justify-content: space-between;
    padding-inline: 5%;
    box-sizing: border-box;
    transition: color 1s;
    font-weight: 600;
    justify-content: flex-end;
    gap: 20px;

    a {
        color: inherit;
    }
}

/* Small devices (phones, 600px and down) */
@media (max-width: 600px) {
    nav {
        font-size: 1rem;
    }
}


#scroll-wrapper {
    height: 100vh;
    height: 100dvh;
    width: 100vw;
    overflow-y: scroll;
    scroll-snap-type: y mandatory;
    scroll-behavior: smooth;
}

.scroll-section {
    height: 100%;
    scroll-snap-align: start;
    position: relative;
}

#projects-title {
    /*font-size: clamp(64px, 16vw, 240px); */
    color: #b0b0b0;
    padding-left: 5px;
    margin-block: 30px;
    width: fit-content;
    border-left: solid #b0b0b0 3px;
}

#project-section {
    display: flex;
    flex-direction: column;
    /* height: 200vh; */
    margin-left: 5%;
    color: rgb(226, 226, 226);
}

#projects {
    overflow: hidden;
    padding-bottom: 130px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

#project-container {
    width: 100%;
    height: 80%;
    max-height: 500px;
    display: flex;
    gap: 30px;
}

.project {
    position: relative;
    height: 100%;
    border-radius: 10px;
    background-color: #b0b0b01a;
    backdrop-filter: blur(8px);
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    gap: 30px;
    aspect-ratio: 16/10;
    max-width: 85%;
    overflow: hidden;
}

.project-details{
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    padding: 20px 50px 20px 20px;
    opacity: 0;
    background-color: #2b2b2b75;
    backdrop-filter: blur(8px);
    transition: opacity .2s linear;

    h2{
        margin-bottom: 10px;
    }

    p{
        overflow-y: scroll;
    }
}

.project.active .project-details {
    opacity: 1;
  }

.info-icon{
    height: 40px !important;
    width: 40px !important;
    position: absolute;
    top: 10px;
    right: 10px;
    z-index: 1;
}

.info-icon:hover{
    cursor: pointer;
    filter: drop-shadow(2px 4px 6px black);
}

.project-links{
    position: absolute;
    bottom: 15px;
    right: 15px;
    display: flex;
    gap: 20px;

    img{
        height: 30px !important;
        width: 30px !important;
    }

    img:hover{
        cursor: pointer;
        filter: drop-shadow(2px 4px 8px black);
    }
}


/*Anything below height of 768px*/
@media (max-height: 768px) {
    #project-container {
        height: 100%;
    }

    #projects-title {
        margin-block: 15px;
    }

    .project{
        height: 100%;
    }
    
    #projects{
        padding-bottom: 70px;
    }

    #tech-marquee{
        display: none;
    }

    nav {
        padding-bottom: 15px;
    }
}

picture img {
    height: 100%;
    width: 100%; /* Optional: ensures full container width */
    object-fit: cover;
    object-position: top;
    border-radius: 5px;
    display: block; /* Removes unwanted bottom spacing */
  }

#tech-marquee {
    position: absolute;
    bottom: 70px;
    left: 0;
    right: 0;
    margin-inline: 10%;
    height: 50px;
    overflow: hidden;
    mask: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0));

    [class*="tech"] {
        width: auto;
        height: 100%;
        position: absolute;
        left: -60px;
        animation-name: scrollRight;
        animation-duration: var(--animDur);
        animation-timing-function: linear;
        animation-iteration-count: infinite;
        filter: grayscale(1);
    }

    .tech1 {
        animation-delay: calc(var(--animDur) / 6 * (6 - 1) * -1);
    }

    .tech2 {
        animation-delay: calc(var(--animDur) / 6 * (6 - 2) * -1);
    }

    .tech3 {
        animation-delay: calc(var(--animDur) / 6 * (6 - 3) * -1);
    }

    .tech4 {
        animation-delay: calc(var(--animDur) / 6 * (6 - 4) * -1);
    }

    .tech5 {
        animation-delay: calc(var(--animDur) / 6 * (6 - 5) * -1);
    }

    .tech6 {
        animation-delay: calc(var(--animDur) / 6 * (6 - 6) * -1);
    }
}

@keyframes scrollRight {
    to {
        left: max(calc(160px * 6), 100%);
    }
}

#dev-details {
    max-width: 35ch;
    width: 90vw;
    width: 90dvw;
    border-radius: 10px;
    background-color: #b0b0b01a;
    padding: 20px;
    backdrop-filter: blur(2px);
    box-sizing: border-box;
    opacity: 0;
    transform: translateY(50px);

    transition: opacity 1s ease, transform 1s ease;

    h3 {
        margin: 0;
    }

    p:last-child {
        margin-bottom: 0;
    }
}



.subtitle {
    font-size: 0.9rem;
    margin-block: 5px;
    filter: brightness(0.8);
}

.box-shadow {
    box-shadow: rgb(255, 255, 255) 0px 0px 0px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px, rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.1) 0px 4px 6px -4px;
}

#saturation-layer {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    mix-blend-mode: saturation;

    /*background: linear-gradient(to right,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0) 40%,
    rgba(255, 255, 255, 1) 50%,
    rgba(255, 255, 255, 0) 60%,
    rgba(255, 255, 255, 0) 100%);*/

    animation-name: saturationStrobe;
    animation-duration: 2s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

@keyframes saturationStrobe {
    to {
        opacity: 0.1;
    }
}

@media (max-height: 500px) {
    #intro {
        flex-direction: row;
        align-items: center;
        justify-content: space-evenly;
        box-sizing: border-box;
    }
}

#background-image {
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background-image: url('images/steve-gribble-unsplash.jpg');
    background-size: cover;
    background-position: center;
    z-index: -1;
    transition:
        transform .8s ease,
        filter .8s ease;
}

#background-image.zoom-blur {
    transform: scale(1.05);
    filter: blur(6px) brightness(0.8);
}

.horizontal-scroll {
    padding-bottom: 12px;
    /*mask: linear-gradient(to right, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0));*/
}

.horizontal-scroll::-webkit-scrollbar {
    margin-top: 4px;
    height: 8px;
}

.horizontal-scroll::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.3);
    border-radius: 4px;
}

.horizontal-scroll::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0, 0, 0, 0.5);
}

.horizontal-scroll::-webkit-scrollbar-track {
    background: transparent;
    margin-top: 12px;
}



#scroll-wrapper::-webkit-scrollbar {
    width: 8px;
}

#scroll-wrapper::-webkit-scrollbar-thumb {
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 4px;
}

#scroll-wrapper::-webkit-scrollbar-thumb:hover {
    background-color: rgba(255, 255, 255, 0.5);
}

#scroll-wrapper::-webkit-scrollbar-track {
    background: transparent;
}

@media (max-width: 768px) {
    #projects-title {
        margin-top: 15px;
        font-size: 1.5em;
    }
}

